[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "unique_log_filter"
version = "0.1.0"
description = "A log filter that removes duplicate log messages"
authors = [{name = "Kevin Phoenix", email = "kevin@kphoenix.us"}]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Topic :: System :: Logging",
]
requires-python = ">=3.7"

[project.urls]
Home = "https://github.com/twizmwazin/unique-log-filter"
